Fix z-index for emoji selection

--- a/src/components/ReplyToNote/ReplyToNote.module.scss
+++ b/src/components/ReplyToNote/ReplyToNote.module.scss
@@ -8,6 +8,7 @@
   display: block;
   position: relative;
   margin-block: 5px;
+  z-index: var(--z-index-floater);
 }
 
 .newNote {
